fix: error in the paragraph

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class='explanation'>
       <p>ИНСТРУКЦИЯ</p>
       <p>Для ввода отрицательных чисел используется дополнительная кнопка "+/-" </p>
-      <p>Для вычисления квадратного корня нужно указать любую цифру </p>
+      <p>Для вычисления квадратного корня нужно указать из какого числа вычислять квадратный корунь, указать операцию, а потом любую цифру </p>
     </div>
   </div>
   
