--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button class='span-two' data-delete>DEL</button>
       <button data-number-operand>+/-</button>
       <button data-operation>X<sup>n</sup></button>
-      <button data-operation >&#8730;</button>
+      <button data-sqrt>&#8730;</button>
       <button data-operation>÷</button>
       <button data-number>1</button>
       <button data-number>2</button>
@@ -40,7 +40,6 @@
     <div class='explanation'>
       <p>ИНСТРУКЦИЯ</p>
       <p>Для ввода отрицательных чисел используется дополнительная кнопка "+/-" </p>
-      <p>Для вычисления квадратного корня нужно указать из какого числа вычислять квадратный корунь, указать операцию, а потом любую цифру </p>
     </div>
   </div>
   
